# lsmtree-autotester

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt
canary/: __init__.py  __main__.py  cli.py  metrics_server.py  probe.py
data/01KH7JM0VPWEFXA4HSXFDVQXKH/: index  meta.json
data/01KH7JM0VPWEFXA4HSXFDVQXKH/chunks/: 000001
data/01KH7WNHFA4JJ5PH5JP7F0HS6W/: index  meta.json
data/01KH7WNHFA4JJ5PH5JP7F0HS6W/chunks/: 000001
data/01KH8BG0WWFT0XWTDE344JMX5G/: index  meta.json
data/01KH8BG0WWFT0XWTDE344JMX5G/chunks/: 000001
data/01KH8BG17G91W4YP7ZHWTW0J7B/: index  meta.json
data/01KH8BG17G91W4YP7ZHWTW0J7B/chunks/: 000001
data/01KH8BG1GBGXD5N8J67YF93GFN/: index  meta.json
data/01KH8BG1GBGXD5N8J67YF93GFN/chunks/: 000001
data/01KH8S65EA2YQZ24X4GQWVH4WD/: index  meta.json
data/01KH8S65EA2YQZ24X4GQWVH4WD/chunks/: 000001
scripts/: start-all.sh
tests/: __init__.py
tests/unit/: test_cli.py  test_probe.py
