[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsmtree-canary"
version = "0.1.0"
description = "Canary that sends put/get requests to an LSMTree HTTP server and writes liveness metrics."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
canary = "canary.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["canary*"]
